2008-07-02  Filippo Argiolas <filippo dot argiolas at gmail dot com>
	* gst-libs/gst/gl/glshader.c,h:
	Removed GstGLProgram and let each shader object have its own program
	object so that it's easy to manage them and apply them to multiple
	rendering passes (see SoC reports on gnome-soc-list for detailed info)
	* gst/gl/gstgleffects.c:
	* gst/gl/gstgleffectssources.h:
	* gst/gl/gstgleffectstextures.h:
	Added a first working version of GstGLEffects element, support for
	some nice effect (mainly distortion and color curve ones). Made some
	effort to support multiple subsequent rendering targets so that more
	effects could be chained. Many things to fix yet!
	* tests/examples/fxtest.c: Little gtk+ test app (the one I use for
	testing, edit caps in the source if you want to try it)

2008-06-07  Filippo Argiolas <filippo dot argiolas at gmail dot com>
	* gst-libs/gst/gl/glshader.c,h:
	* gst-libs/gst/gl/glprogram.h:
	* gst-libs/gst/gl/glextensions.c,h:
	Added loading scalar float uniforms (the only ones I need at the
	moment) support. Other minor changes.

2008-06-07  Filippo Argiolas <filippo dot argiolas at gmail dot com>
	* gst-libs/gst/gl/gstglshader.c:
	* gst-libs/gst/gl/gstglshader.h:
	* gst-libs/gst/gl/gstglprogram.h:
	Merged first work for Google Summer of Code 2008.
	Initial draft for a couple of GObject classes to manage GLSL Program
	and Shader Objects. It's far from complete but usable yet, still need
	some data structure to track which shader are attached with which
	programs, uniform variables support etc
	* gst-libs/gst/gl/glextensions.c:
	* gst-libs/gst/gl/glextensions.h:
	Added support for a couple of gl functions needed to manage shaders
	* gst-libs/gst/gl/Makefile.am: Build new classes

2008-04-06  Sebastian Dröge  <slomo@circular-chaos.org>

        Patch by: Damien Lespiau <damien dot lespiau at gmail dot com>

        * configure.ac:
        Actually build dlls when cross-compiling with mingw32.
        Fixes bug #526247.
