@@ -84,7 +84,6 @@ void gst_gl_shader_set_uniform_1i (GstGLShader *shader, const gchar *name, gint 
 void gst_gl_shader_set_uniform_1f (GstGLShader *shader, const gchar *name, gfloat value);
 void gst_gl_shader_set_uniform_1fv (GstGLShader *shader, const gchar *name, guint count, gfloat * value);
 
-
 G_END_DECLS
 
 #endif /* __GST_GL_SHADER_H__ */
